--- a/style.css
+++ b/style.css
@@ -48,20 +48,6 @@ p {
   margin: 0 50% 12px 0;
 }
 
-/* - will one hyphen work? - */
-ul {
-  color: #0187d1;
-  width: 400px;
-}
-
-li, a {
-  color: #a61393;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 16px;
-  list-style: none;
-}
-
-
 blockquote {
   color: #0187d1;
   width: 450px;
@@ -71,4 +57,31 @@ blockquote {
   font-size: 36px;
   text-align: center;
   border: 1px solid #0187d1;
+}
+
+#primary-nav {
+  width: 400px;
+  background-color: #3cb187;
+  margin-top: 60px;
+  margin-bottom: 120px;
+  margin: 60px 0 120px 0;
+}
+
+/* - will one hyphen work? - */
+ul {
+  color: #0187d1;
+  width: 400px;
+}
+
+li, a {
+  color: #2d13a6;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  list-style: none;
+  display: inline-block;
+  padding: 10px 5px;
+}
+
+.active {
+  color: #ffffff;
 }
