--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ blockquote {
 }
 
 /* --- Navigation Menu --- */
-#primary-nav, #vertical-nav {
+.primary-nav, #vertical-nav {
   width: 400px;
   background-color: #3cb187;
   /* --- change to auto to center --- */
@@ -77,7 +77,7 @@ blockquote {
 
 }
 
-#primary-nav ul, #vertical-nav ul {
+.primary-nav ul, #vertical-nav ul {
   color: #0187d1;
   /* --- width: 400px; --- */
   list-style-type: none;
@@ -88,7 +88,7 @@ blockquote {
 }
 
 /* --- Need to add ID to specify primary nav list items and hyperlinks --- */
-#primary-nav li, #primary-nav a {
+.primary-nav li, .primary-nav a {
   color: #2d13a6;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
@@ -96,12 +96,34 @@ blockquote {
   padding: 10px 5px;
 }
 
-#vertical-nav li, #vertical-nav and {
+#vertical-nav li, #vertical-nav a {
   color: #2d13a6;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
   display: block;
   padding: 10px 5px;
+}
+
+/* --- Show difference between ID and class --- */
+
+.active,
+#primary-nav a.active,
+#primary-nav a:hover,
+#vertical-nav a.active,
+#vertical-nav a:hover {
+  color: #ffffff;
+}
+
+.active,
+.primary-nav a.active,
+.primary-nav a:hover,
+#vertical-nav a.active,
+#vertical-nav a:hover {
+  color: #ffffff;
+}
+
+.centered {
+  text-align: center;
 }
 
 /* --- Forms --- */
@@ -137,14 +159,10 @@ input[type=submit]:hover {
   padding: 20px;
 }
 
-
-
-.active {
-  color: #ffffff;
-}
-
-.centered {
-  text-align: center;
+/* --- Column Classes --- */
+.first {
+	clear: both;
+	margin-left: 0;
 }
 
 .column-1 {
@@ -167,6 +185,127 @@ input[type=submit]:hover {
   color: #9d6816;
 }
 
+.one-half, .two-fourths, .three-sixths {
+  float: left;
+  width: 49%;
+}
+
+.one-third, .two-sixths {
+  float: left;
+  width: 32%;
+}
+
+.two-thirds, .four-sixths {
+  float: left;
+  width: 65%;
+}
+
+.one-fourth {
+  float: left;
+  width: 24%;
+}
+
+.three-fourths {
+  float: left;
+  width: 74%;
+}
+
+.one-fifth {
+  float: left;
+  width: 19%;
+}
+
+.two-fifths {
+  float: left;
+  width: 38%;
+}
+
+.three-fifths {
+  float: left;
+  width: 58%;
+}
+
+.one-sixth {
+  float: left;
+  width: 14%;
+}
+
+.five-sixths {
+  float: left;
+  width: 74%;
+}
+
+
+
+
+
+
 p.column {
   width: 100%;
 }
+
+
+/*
+Media Queries
+---------------------------------------------------------------------------------------------------- */
+
+/* Desktops, laptops and iPads (landscape)
+--------------------------------------------- */
+
+@media only screen and (max-width: 1139px) {
+
+
+
+
+}
+
+/* iPads (landscape)
+--------------------------------------------- */
+
+@media only screen and (max-width: 1023px) {
+
+
+
+}
+
+
+/* mobile device 960 ---------------------------------------------------------------- */
+@media only screen and (max-width: 960px) {
+
+
+
+}
+
+
+/* iPhones (portrait and landscape) --------------------------------------------- */
+
+@media only screen and (max-width: 768px) {
+
+
+}
+
+/* Kindle Fire & Tablets
+--------------------------------------------- */
+
+@media only screen and (max-width: 603px) {
+
+
+
+}
+
+
+/* iPhones (portrait)
+--------------------------------------------- */
+
+@media only screen and (max-width: 375px) {
+
+
+}
+
+
+/* Mobile Device 360 ---------------------------- */
+@media only screen and (max-width: 360px) {
+
+
+}
+
