--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ Media Queries
 
 @media only screen and (max-width: 1139px) {
 
-
+  
 
 
 }
@@ -280,6 +280,10 @@ Media Queries
 /* iPhones (portrait and landscape) --------------------------------------------- */
 
 @media only screen and (max-width: 768px) {
+
+  .container {
+    width: 65%;
+  }
 
 
 }
